// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accordion default 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="title"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <h2>
      Title
    </h2>
     
    <svg
      fill="none"
      height={20}
      stroke="gray"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
  <div
    className="hidden"
  >
    Content
  </div>
  <style
    jsx={true}
  >
    
          .hidden {
            display: none;
          }
          .title {
            display: flex;
            align-items: center;
          }
        
  </style>
</div>
`;

exports[`Storyshots Accordion expanded 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="title"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    Title
     
    <svg
      fill="none"
      height={20}
      stroke="gray"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="18 15 12 9 6 15"
      />
    </svg>
  </div>
  <div
    className="content"
  >
    Content
  </div>
  <style
    jsx={true}
  >
    
          .hidden {
            display: none;
          }
          .title {
            display: flex;
            align-items: center;
          }
        
  </style>
</div>
`;
